--- a/_includes/footers/legal.html
+++ b/_includes/footers/legal.html
@@ -1,24 +1,24 @@
 <footer>
   <article>
     <section>
-      <h2>About C<span class="cfsg">o</span>founders Pte Ltd</h2>
-      <p>We're a collective of designers and developers that help build startups for fun and profit.</p>
-      <p>Find out more at <a href="http://www.cofounders.sg/">cofounders.sg</a>.</p>
+      <h2>About C<span class="cfsg">o</span>exoteric</h2>
+      <p>We build things.</p>
+      <p>Find out more at <a href="http://exotericgrowth.com">exoteric</a>.</p>
       <p>
-        <a href="{{ site.owner.facebook }}" class="social facebook">Cofounders on Facebook</a>
-        <a href="{{ site.owner.github }}" class="social github">Cofounders on GitHub</a>
+        <a href="{{ site.owner.facebook }}" class="social facebook">facebook</a>
+        <a href="{{ site.owner.github }}" class="social github">GitHub</a>
       </p>
     </section>
     <section>
-      <h2>About Legal.cf.sg</h2>
-      <p>This service is dedicated to the creative community in Singapore. <a href="{{ site.url }}">Legal.cf.sg</a> hosts free and open source legal templates. Its goal is to improve access to legal information.</p>
-      <p>Lovingly handspun by the unlawyerly geeks of Cofounders Pte Ltd.</p>
+      <h2>About </h2>
+      <p>This service is a test <a href="{{ site.url }}">Exoteric</a> hosts free and open source legal templates. Its goal is to improve access to legal information.</p>
+      
     </section>
     <section>
       <h2>Minuti&aelig;</h2>
       <ul>
-        <li><a href="https://github.com/cofounders/legal/blob/gh-pages/CONTRIBUTING.md">How to Contribute</a></li>
-        <li><a href="https://github.com/cofounders/legal/blob/gh-pages/LICENSE.md">Copyright Attribution</a></li>
+        <li><a href="">How to Contribute</a></li>
+        <li><a href="">Copyright Attribution</a></li>
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Terms & Conditions</a></li>
       </ul>
