--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }} {% if page.title %} | {% endif %} {{ site.owner.name }}</title>
-  <meta name="description" content="Cofounders is a collective of techies, designers and engineers, who work with startups in Singapore." />
-  <meta name="keywords" content="cofounders, cfsg, singapore, startups, cto, technical cofounder, investment, incubator, accelerator, tis, nrf, funding" />
+  <meta name="description" content="." />
+  <meta name="keywords" content="cong" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="{{ site.baseurl }}images/favicon.png" />
   <link rel="stylesheet" href="{{ site.baseurl }}styles/site.css" />
