--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -4,7 +4,7 @@ layout: default
 <nav>
   <div>
   <a href="{{ site.baseurl }}" class="browse">Browse all templates</a>
-  <a href="{{ site.owner.website }}" class="logo">C<span class="cfsg">o</span>founders.sg</a>
+  <a href="{{ site.owner.website }}" class="logo">C<span class="exoteric">/</span>exoteric</a>
     <a href="{{ site.owner.contact }}" class="contact">Contact us</a>
   </div>
 </nav>
